# drm-cxx

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  BUILD.gn  CHANGELOG.md  CMakeLists.txt  INVARIANTS.md  README.md  a.out  config.h.in  config.h.meson  drm_cxx.gni  emb.yaml  meson.build  meson.options  porting_plan.md
benchmarks/: CMakeLists.txt  meson.build
benchmarks/allocator_torture/: main.cpp
benchmarks/plane_stress/: main.cpp
benchmarks/tone_mapper_bench/: main.cpp
drm-cxx/: CMakeLists.txt  drm-cxx.hpp  log.hpp  meson.build
drm-cxx/core/: device.cpp  device.hpp  format.cpp  format.hpp  property_store.cpp  property_store.hpp  resources.cpp  resources.hpp
drm-cxx/detail/: format.hpp
drm-cxx/display/: connector_info.hpp  edid.cpp  edid.hpp  hdr_metadata.hpp
drm-cxx/gbm/: buffer.cpp  buffer.hpp  device.cpp  device.hpp  surface.cpp  surface.hpp
drm-cxx/input/: event_dispatcher.cpp  event_dispatcher.hpp  keyboard.cpp  keyboard.hpp  pointer.cpp  pointer.hpp  seat.cpp  seat.hpp
drm-cxx/modeset/: atomic.cpp  atomic.hpp  mode.cpp  mode.hpp  page_flip.cpp  page_flip.hpp
drm-cxx/planes/: allocator.cpp  allocator.hpp  composition_layer.hpp  layer.cpp  layer.hpp  matching.cpp  matching.hpp  output.cpp  output.hpp  plane_registry.cpp  plane_registry.hpp
drm-cxx/sync/: fence.cpp  fence.hpp
drm-cxx/vulkan/: display.cpp  display.hpp  drm_surface.cpp  drm_surface.hpp
examples/: CMakeLists.txt  logind_session.cpp  logind_session.hpp  meson.build  select_device.hpp
examples/atomic_modeset/: main.cpp
examples/camera/: convert.cpp  convert.hpp  main.cpp
examples/capture_demo/: main.cpp
examples/common/: CMakeLists.txt  cursor_size.hpp  draw.hpp  event_loop.hpp  format_probe.hpp  kms_present.hpp  meson.build  multi_crtc_probe.hpp  open_output.hpp  select_connector.hpp  session_pump.hpp  uvc_capture.hpp  vt_switch.hpp
examples/cursor_rotate/: main.cpp
examples/hotplug_monitor/: main.cpp
examples/layered_demo/: main.cpp
examples/mdi_demo/: CMakeLists.txt  README.md  main.cpp  meson.build  shell.cpp  shell.hpp
examples/mouse_cursor/: README.md  main.cpp  xcursor_loader.cpp  xcursor_loader.hpp  xcursor_smoke.cpp
examples/overlay_planes/: main.cpp
examples/scene_formats/: main.cpp
examples/scene_priority/: main.cpp
examples/scene_warm_start/: main.cpp
examples/signage_player/: CMakeLists.txt  README.md  example.toml  main.cpp  meson.build  overlay_renderer.cpp  overlay_renderer.hpp  playlist.cpp  playlist.hpp
examples/test_patterns/: README.md  main.cpp  patterns.cpp  patterns.hpp
examples/thorvg_janitor/: CMakeLists.txt  README.md  drm_template.hpp  main.cpp  meson.build  tvggame.cpp
examples/video_grid/: main.cpp
examples/vulkan_display/: main.cpp
src/: CMakeLists.txt  buffer_mapping.hpp  drm-cxx.hpp  log.hpp  meson.build
src/capture/: jpg.cpp  jpg.hpp  png.cpp  png.hpp  snapshot.cpp  snapshot.hpp
src/core/: device.cpp  device.hpp  egl_loader.cpp  egl_loader.hpp  format.cpp  format.hpp  gles_loader.cpp  gles_loader.hpp  property_store.cpp  property_store.hpp
src/csd/: animator.cpp  animator.hpp  damage.cpp  damage.hpp  overlay_reservation.cpp  overlay_reservation.hpp  presenter.hpp  presenter_composite.cpp  presenter_composite.hpp  presenter_fb.cpp  presenter_fb.hpp  presenter_plane.cpp  presenter_plane.hpp  probe_presenter.cpp  probe_presenter.hpp  renderer.cpp  renderer.hpp  shadow_cache.cpp  shadow_cache.hpp  surface.cpp  surface.hpp  theme.cpp  theme.hpp  window_state.hpp
src/cursor/: cursor.cpp  cursor.hpp  renderer.cpp  renderer.hpp  theme.cpp  theme.hpp
src/detail/: expected.hpp  format.hpp  span.hpp
src/display/: color_pipeline_curves.cpp  color_pipeline_curves.hpp  connector_capabilities.cpp  connector_capabilities.hpp  connector_info.hpp  crtc_capabilities.cpp  crtc_capabilities.hpp  crtc_color_pipeline.cpp  crtc_color_pipeline.hpp  driver_profile.cpp  driver_profile.hpp  edid.cpp  hdr_metadata.cpp  hdr_metadata.hpp  hdr_metadata_cache.cpp  hdr_metadata_cache.hpp  hotplug_monitor.cpp  hotplug_monitor.hpp  mode_list.cpp  mode_list.hpp  scanout_target.cpp  scanout_target.hpp  tone_mapper.cpp  tone_mapper.hpp
src/dumb/: buffer.cpp  buffer.hpp
src/fmt/: format_mod.cpp  format_mod.hpp
src/gbm/: buffer.cpp  buffer.hpp  device.cpp  device.hpp  surface.cpp
src/input/: event_dispatcher.cpp  event_dispatcher.hpp  key_repeater.cpp  key_repeater.hpp  keyboard.cpp  keyboard.hpp  pointer.cpp  seat.cpp  seat.hpp
src/modeset/: atomic.cpp  atomic.hpp  mode.cpp  mode.hpp  modeset.cpp  modeset.hpp  page_flip.cpp  page_flip.hpp
src/planes/: allocator.cpp  allocator.hpp  composition_layer.hpp  layer.cpp  layer.hpp  matching.cpp  matching.hpp  output.cpp  output.hpp  plane_registry.cpp  plane_registry.hpp
src/present/: buffer_ring.cpp  buffer_ring.hpp  dumb_ring_source.cpp  dumb_ring_source.hpp  dumb_scanout_sink.cpp  dumb_scanout_sink.hpp  frame_economy.hpp  gbm_producer.cpp  gbm_producer.hpp  gl_scanout_producer.cpp  gl_scanout_producer.hpp  negotiate.cpp  negotiate.hpp  scanout_backend.cpp  scanout_backend.hpp  scanout_format.cpp  scanout_format.hpp  scanout_producer.hpp  vk_scanout_producer.cpp  vk_scanout_producer.hpp
src/scene/: README.md  buffer_source.hpp  commit_report.hpp  compatibility_report.hpp  composite_canvas.cpp  composite_canvas.hpp  composition_target.hpp  cursor_source.cpp  cursor_source.hpp  display_params.hpp  dma_buf_source_cache.cpp  dma_buf_source_cache.hpp  dumb_buffer_source.cpp  dumb_buffer_source.hpp  egl_runtime.cpp  egl_runtime.hpp  egl_stream_builder.cpp  egl_stream_builder.hpp  egl_stream_source.cpp  egl_stream_source.hpp  external_dma_buf_pool.cpp  external_dma_buf_pool.hpp  external_dma_buf_ring.cpp  external_dma_buf_ring.hpp  external_dma_buf_source.cpp  external_dma_buf_source.hpp  gbm_buffer_source.cpp  gbm_buffer_source.hpp  gbm_surface_source.cpp  gbm_surface_source.hpp  gl_compositor.cpp  gl_compositor.hpp  gl_compositor_geometry.hpp  gst_appsink_source.cpp  gst_appsink_source.hpp  layer.hpp  layer_desc.hpp  layer_handle.hpp  (+16 more)
tests/: CMakeLists.txt  README.md  meson.build
(+277 files in other folders)
